SERVER-35231: Invalid decimal continuation can trigger a dassert when decoding a KeyString

(cherry picked from commit 6865427f4a129fed40d7cba730b3cdb33b82d254)